@@ -12,6 +12,8 @@ Version 4.3.1 (development)
 ===========================
 - Added support for hr-adaptivity using TMOP-based error estimator.
 
+- Added 'double' atomicAdd implementation for previous versions of CUDA.
+
 
 Version 4.3, released on July 29, 2021
 ======================================
